Fix overflow text

--- a/frontend-react/src/components/Sidebar/Account/Account.scss
+++ b/frontend-react/src/components/Sidebar/Account/Account.scss
@@ -7,6 +7,7 @@
     display: flex;
     margin: 0.5rem;
     padding: 0.375rem;
+    overflow: hidden;
   }
 
   &__avatar {
@@ -26,5 +27,16 @@
 
   &__name {
     font-weight: 600;
+  }
+
+  &__info {
+    overflow: hidden;
+  }
+
+  &__name,
+  &__email {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 }
